# blackbox_decoder

./: .gitignore  README.md  justfile  pyproject.toml
.github/workflows/: tests.yml
blackbox_decoder/: __main__.py  app.py  log.py  main.py
tests/: test_flights.py  test_log.py
